--- a/src/Components/EventsComponent/EventCompDetails.css
+++ b/src/Components/EventsComponent/EventCompDetails.css
@@ -176,3 +176,22 @@
     padding-left: 10px;
   }
 }
+
+@media (max-width: 991px) {
+  #troo-da-event-detail-section .col-md-9 {
+    width: 100%;
+  }
+  #troo-da-event-detail-section .col-md-3 {
+    width: 100%;
+  }
+  .gest-deals {
+    flex-wrap: wrap;
+    text-align: left;
+    justify-content: start;
+  }
+}
+
+@media (max-width:767px){
+  #troo-da-event-detail-section {padding: 0px 0 50px 0;}
+  .special-guest {margin-top: 30px;}
+}
