--- a/src/Components/EventsComponent/EventComponent.css
+++ b/src/Components/EventsComponent/EventComponent.css
@@ -1,70 +1,81 @@
 #troo-da-event-section {
-    padding: 100px 0;
+  padding: 100px 0;
 }
 .event-col {
-    cursor: pointer;
+  cursor: pointer;
 }
 .event-img {
-    position: relative;
+  position: relative;
 }
 .event-img img {
-    width: 100%;
-    background: #E3E3E3;
-    border-radius: 5px;
-    transition: 0.5s;
+  width: 100%;
+  background: #e3e3e3;
+  border-radius: 5px;
+  transition: 0.5s;
 }
 .event-img::after {
-    background: #171717;
-    opacity: 0.5;
-    border-radius: 5px;
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    display: none;
-    transition: 0.5s;
-  }
+  background: #171717;
+  opacity: 0.5;
+  border-radius: 5px;
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  display: none;
+  transition: 0.5s;
+}
 .event-text {
-    display: flex;
-    background: #FFFFFF;
-    box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
-    border-radius: 5px;
-    padding: 24px 21px;
-    margin-top: -18px;
-    z-index: 99;
-    position: relative;
-    max-width: 350px;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    top: -50px;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  background: #ffffff;
+  box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
+  border-radius: 5px;
+  padding: 24px 21px;
+  margin-top: -18px;
+  z-index: 99;
+  position: relative;
+  max-width: 350px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: -50px;
+  align-items: center;
+  justify-content: space-between;
 }
 .event-text span {
-    font-family: 'Nunito';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 27px;
-    color: #000000;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  color: #000000;
 }
 img.hover-img {
-    display: none;
-    transition: 0.5s;
-    position: absolute;
-    right: 29px;
-    top: 33px;
+  display: none;
+  transition: 0.5s;
+  position: absolute;
+  right: 29px;
+  top: 33px;
 }
 .event-col:hover .event-img::after {
-    display: block;
-    transition: 0.5s;
+  display: block;
+  transition: 0.5s;
+}
+.event-col:hover img.normal-img {
+  display: none;
+}
+.event-col:hover img.hover-img {
+  display: block;
+}
+
+@media (max-width: 991px) {
+  .event-text {
+    flex-wrap: wrap;
+    padding: 10px 2px;
   }
-  .event-col:hover img.normal-img {
-    display: none;
+  .event-text span {
+    font-size: 18px;
+    line-height: 29px;
   }
-  .event-col:hover img.hover-img {
-    display: block;
-  }
+}
