--- a/src/Components/FetureComponent/CourseDetailsComponent.css
+++ b/src/Components/FetureComponent/CourseDetailsComponent.css
@@ -1,172 +1,201 @@
 #troo-da-cources-detail-section {
-    padding: 66px 0 100px 0;
+  padding: 66px 0 100px 0;
 }
 .cources-call-desls .col-md-3:first-child .instructor-col {
-    border-left: 0;
+  border-left: 0;
 }
 .instructor-col {
-    display: flex;
-    align-items: center;
-    border-left: 1px solid rgba(53, 86, 191, 0.2);
-    padding: 0 15px 0 15px;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  border-left: 1px solid rgba(53, 86, 191, 0.2);
+  padding: 0 15px 0 15px;
+  justify-content: center;
 }
 .ins-cr {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 .ins-cr img {
-    box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
-    border-radius: 100px;
+  box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
+  border-radius: 100px;
 }
 .ins-de span {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: #171717;
-    display: block;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #171717;
+  display: block;
 }
 .ins-de strong {
-    font-family: 'Nunito';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 22px;
-    color: #3556BF;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  color: #3556bf;
 }
 .ins-de svg {
-    color: #EBBD19;
+  color: #ebbd19;
 }
 .ins-de strong a {
-    font-family: 'Nunito';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 22px;
-    color: #3556BF;
-    text-decoration: none;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  color: #3556bf;
+  text-decoration: none;
 }
 .over-vi img {
-    background: #F8F9FF;
-    border: 1px solid rgba(53, 86, 191, 0.2);
-    box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
-    border-radius: 5px;
-    margin-top: 54px;
-    margin-bottom: 23px;
-    width: 100%;
+  background: #f8f9ff;
+  border: 1px solid rgba(53, 86, 191, 0.2);
+  box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
+  border-radius: 5px;
+  margin-top: 54px;
+  margin-bottom: 23px;
+  width: 100%;
 }
 #troo-da-cources-detail-section h4 {
-    margin-bottom: 9px;
+  margin-bottom: 9px;
 }
 #troo-da-cources-detail-section button.accordion-button {
-    color: #3556BF;
+  color: #3556bf;
 }
 .instructor-section {
-    margin-bottom: 30px;
-    background: #F8F9FF;
-    border: 1px solid rgba(53, 86, 191, 0.2);
-    border-radius: 5px;
-    padding-left: 31px;
-    padding-top: 30px;
-    padding-right: 0;
-    padding-bottom: 23px;
+  margin-bottom: 30px;
+  background: #f8f9ff;
+  border: 1px solid rgba(53, 86, 191, 0.2);
+  border-radius: 5px;
+  padding-left: 31px;
+  padding-top: 30px;
+  padding-right: 0;
+  padding-bottom: 23px;
 }
 .instructor-section .instructor-col {
-    justify-content: start;
-    border: none;
+  justify-content: start;
+  border: none;
 }
 .instructor-col {
-    display: flex;
-    align-items: center;
-    border-left: 1px solid rgba(53, 86, 191, 0.2);
-    padding: 0 15px 0 15px;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  border-left: 1px solid rgba(53, 86, 191, 0.2);
+  padding: 0 15px 0 15px;
+  justify-content: center;
 }
 .instructor-section p {
-    margin-top: 18px;
-    margin-bottom: 19px;
+  margin-top: 18px;
+  margin-bottom: 19px;
 }
 .instructor-section .foot-socail {
-    display: flex;
-    float: none;
-    align-items: center;
+  display: flex;
+  float: none;
+  align-items: center;
 }
 .instructor-section .foot-socail ul {
-    margin: 0;
+  margin: 0;
 }
-
 
 .sidebar {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 5%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 5%;
 }
 .course-features {
-    background: #F8F9FF;
-    border: 1px solid rgba(53, 86, 191, 0.2);
-    border-radius: 5px;
-    padding-left: 20px;
-    width: 100%;
-    padding-top: 14px;
-    padding-right: 20px;
-    margin-bottom: 30px;
+  background: #f8f9ff;
+  border: 1px solid rgba(53, 86, 191, 0.2);
+  border-radius: 5px;
+  padding-left: 20px;
+  width: 100%;
+  padding-top: 14px;
+  padding-right: 20px;
+  margin-bottom: 30px;
 }
 #troo-da-cources-detail-section h4 {
-    margin-bottom: 9px;
+  margin-bottom: 9px;
 }
 .course-features h4 {
-    border-bottom: 1px solid rgba(53, 86, 191, 0.2);
-    padding-bottom: 8px;
+  border-bottom: 1px solid rgba(53, 86, 191, 0.2);
+  padding-bottom: 8px;
 }
 .course-features ul {
-    padding: 0;
+  padding: 0;
 }
 .course-features ul li {
-    list-style: none;
-    padding-bottom: 14px;
+  list-style: none;
+  padding-bottom: 14px;
 }
 .course-features strong {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 24px;
-    color: #171717;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: #171717;
 }
 .course-features span {
-    color: #3556BF;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    padding-left: 15px;
+  color: #3556bf;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  padding-left: 15px;
 }
 .Cources-page.sub-page .call-ss {
-    text-align: center;
+  text-align: center;
 }
 .course-features .call-ss {
-    margin-top: 50px;
-    margin-bottom: 60px;
-    text-align: center;
+  margin-top: 50px;
+  margin-bottom: 60px;
+  text-align: center;
 }
 .resent-courcse {
-    display: flex;
-    align-items: center;
-    margin-top: 32px;
+  display: flex;
+  align-items: center;
+  margin-top: 32px;
 }
 .ret-img img {
-    background: #F8F9FF;
-    border: 1px solid rgba(53, 86, 191, 0.2);
-    border-radius: 5px;
-    margin-right: 18px;
+  background: #f8f9ff;
+  border: 1px solid rgba(53, 86, 191, 0.2);
+  border-radius: 5px;
+  margin-right: 18px;
 }
 .ret-tile {
-    font-family: 'Nunito';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 22px;
-    color: #000000;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  color: #000000;
+}
+
+@media (max-width: 991px) {
+  #troo-da-cources-detail-section .col-md-9 {
+    width: 100%;
+  }
+  #troo-da-cources-detail-section .col-md-3 {
+    width: 100%;
+  }
+  .sidebar {
+    margin-top: 30px;
+  }
+  .Cources-page.sub-page #troo-da-cources-detail-section .col-md-3 {
+    width: 25%;
+  }
+  .instructor-col {
+    padding: 0px;
+  }
+  .Cources-page.sub-page #troo-da-cources-detail-sectio .col-md-3.cours-s {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 767px) {
+  .instructor-col {
+    border: none;
+  }
+  .instructor-col {
+    justify-content: left;
+  }
 }
