--- a/src/Components/InstructorComponent/InstructureComponent.css
+++ b/src/Components/InstructorComponent/InstructureComponent.css
@@ -80,6 +80,8 @@
 }
 .team-deatils ul {
   padding: 0 0 0 2px;
+  display: flex;
+  column-gap: 10px;
 }
 .team-deatils ul li {
   display: inline-flex;
@@ -164,5 +166,67 @@
   .instructor:hover .ins-txt {
     margin-top: 0;
     position: static;
+  }
+}
+
+@media (max-width: 991px) {
+  .ins-txt h4 {
+    margin-bottom: 4px;
+    transition: 0.5s;
+    font-size: 18px;
+  }
+  .instructor {
+    padding: 16px 10px;
+    flex-wrap: wrap;
+  }
+  .ins-txt {
+    position: relative;
+    margin-left: 0;
+  }
+  .team-deatils {
+    opacity: 1;
+    top: inherit;
+    bottom: 0;
+    position: static;
+    height: auto !important;
+    margin-top: 34px;
+  }
+  .ins-img img {
+    display: block;
+    margin: 0 auto 12px auto;
+  }
+  .team-deatils ul li a {
+    width: 20px;
+    height: 29px;
+    padding: 6px 0 5px 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .ins-txt {
+    position: relative;
+    margin-left: 24px;
+  }
+  .ins-txt h4 {
+    font-size: 20px;
+  }
+  .instructor {
+    padding: 13px;
+  }
+  .instructor {
+    flex-wrap: nowrap;
+    display: block;
+    text-align: center;
+  }
+  .team-deatils {
+    opacity: 1;
+    top: inherit;
+    bottom: 0;
+    position: static;
+    height: auto !important;
+    margin-top: 34px;
+  }
+  #troo-da-team-section {
+    padding: 0;
   }
 }
