--- a/src/Components/PartnerComponent/PartnerComponent.css
+++ b/src/Components/PartnerComponent/PartnerComponent.css
@@ -1,83 +1,97 @@
 #troo-da-our-partner-section {
-    padding: 100px 0;
-    position: relative;
+  padding: 100px 0;
+  position: relative;
 }
 #troo-da-our-partner-section .partner-text .sub-tile-con {
-    margin-bottom: 17px;
+  margin-bottom: 17px;
 }
 .partner-text p {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 .partner-text h6 {
-    font-family: 'Nunito';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
-    color: #171717;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #171717;
 }
 .partner-text h6 a {
-    font-size: 20px;
-    color: #3556BF;
-    text-decoration: none;
-    padding-left: 6px;
+  font-size: 20px;
+  color: #3556bf;
+  text-decoration: none;
+  padding-left: 6px;
 }
 .spinner-wraps {
-    position: absolute;
-    width: 100%;
-    height: 414px;
-    top: 50%;
-    display: block;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    z-index: -9;
+  position: absolute;
+  width: 100%;
+  height: 414px;
+  top: 50%;
+  display: block;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  z-index: -9;
 }
 .spinner-items {
-    border: 1px solid #1AB69D;
-    border-radius: 50%;
-    height: 697px;
-    width: 697px;
-    position: absolute;
-    left: 60%;
-    top: 8%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    animation: zoomk 2s linear 0.75s infinite;
+  border: 1px solid #1ab69d;
+  border-radius: 50%;
+  height: 697px;
+  width: 697px;
+  position: absolute;
+  left: 60%;
+  top: 8%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  animation: zoomk 2s linear 0.75s infinite;
 }
-@keyframes zoomk{
-    0% {
-        transform: translate(-50%, -50%) scale(0.2);
-        opacity: 0;
-    }
-    50% {
-        opacity: 0.9;
-    }
-    100% {
-        transform: translate(-50%, -50%) scale(1);
-        opacity: 0;
-    }
+@keyframes zoomk {
+  0% {
+    transform: translate(-50%, -50%) scale(0.2);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.9;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 0;
+  }
 }
 .spinner-items--2 {
-    animation-delay: 1.25s;
+  animation-delay: 1.25s;
 }
 .spinner-items--3 {
-    animation-delay: 1.75s;
+  animation-delay: 1.75s;
 }
 .logo-ss {
-    background: #FFFFFF;
-    border: 1px solid rgba(53, 86, 191, 0.2);
-    box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
-    border-radius: 5px;
-    margin-bottom: 30px;
-    padding: 13px;
+  background: #ffffff;
+  border: 1px solid rgba(53, 86, 191, 0.2);
+  box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
+  border-radius: 5px;
+  margin-bottom: 30px;
+  padding: 13px;
 }
 .logo-ss img {
-    display: block;
-    margin: 0 auto;
-    width: 100%;
+  display: block;
+  margin: 0 auto;
+  width: 100%;
 }
 
-@media (max-width:1160px){
-    .spinner-wraps{display: none;}
+@media (max-width: 1160px) {
+  .spinner-wraps {
+    display: none;
+  }
+}
+
+@media (max-width: 991px) {
+  .partner-text h2 {
+    font-size: 23px;
+    line-height: 32px;
+  }
+  #troo-da-our-partner-section { padding: 100px 0 0px 0;}
+}
+
+@media (max-width:767px){
+    .logo-ss img{width: auto;}
 }
