--- a/src/Components/FAQComponent/FAQComponent.css
+++ b/src/Components/FAQComponent/FAQComponent.css
@@ -24,7 +24,7 @@ button.accordion-button {
   border: 1px solid rgba(53, 86, 191, 0.2) !important;
   box-shadow: 0px 8px 15px rgb(23 23 23 / 5%) !important;
   border-radius: 5px !important;
-  padding-bottom: 18px;
+  /* padding-bottom: 18px; */
   display: flex;
   column-gap: 5px;
 }
@@ -133,9 +133,24 @@ button.accordion-button {
   }
   #troo-da-faq-section .row {
     justify-content: center;
-   
   }
-  #troo-da-faq-section .col-md-6{
+  #troo-da-faq-section .col-md-6 {
     padding: 5px;
+  }
+}
+
+@media (max-width: 540px) {
+  .find-text {
+    display: grid;
+    padding: 13px 20px;
+  }
+  .or-ss {
+    padding: 6px;
+    border-radius: 45px;
+    margin: 5px 0;
+  }
+  button.accordion-button {
+    font-size: 14px;
+    line-height: 18px;
   }
 }
