--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+/* 
 @media (max-width: 1024px) {
   body,
   html {
@@ -32,4 +32,4 @@
     position: relative;
     overflow-x: hidden;
   }
-}
+} */
