--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -10,7 +10,9 @@
   z-index: 99999;
   background-color: #002347;
 }
-
+.stopScroll{
+  overflow: hidden;
+}
 .fllowa-socail {
   position: fixed;
   z-index: 9;
