--- a/src/Components/FetureComponent/FetureComponent.css
+++ b/src/Components/FetureComponent/FetureComponent.css
@@ -4,6 +4,9 @@
   margin-top: -95px;
   position: relative;
 }
+#troo-da-feature-section a{
+  text-decoration: none;
+}
 .swing {
   animation: swing ease-in-out 1s infinite alternate;
   transform-origin: center -20px;
