--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -198,10 +198,10 @@ a.nav-link {
   padding: 0 20.5px !important;
   position: relative;
 }
-a.nav-link.active {
+li.active a.nav-link.active {
   color: #1ab69d !important;
 }
-a.nav-link.active:before {
+li.active a.nav-link.active:before {
   background: #1ab69d;
   content: "";
   height: 22px;
@@ -230,10 +230,10 @@ a.nav-link.active:before {
   font-size: 16px;
   line-height: 22px;
 }
-.nav-link.test.active button.btn.btn-primary {
+li.active .nav-link.test button.btn.btn-primary {
   color: #1ab69d !important;
 }
-.nav-link.test.active::before {
+li.active .nav-link.test::before {
   background: #1ab69d;
   content: "";
   height: 22px;
@@ -502,5 +502,7 @@ a.btnn.btn-lg:hover {
   .fllowa-socail ul {
     margin: 0 0px 0 35px;
   }
-
+  li.active .nav-link.test::before{
+    display: none;
+  }
 }
