hero global background change

--- a/src/Components/OtherComponent/ErrorPage.css
+++ b/src/Components/OtherComponent/ErrorPage.css
@@ -1,7 +1,7 @@
 .sub-page #troo-da-hero-section {
   padding: 149px 0;
   position: relative;
-  background: #eff2fd;
+  /* background: #eff2fd; */
 }
 .sub-page #troo-da-hero-section:after {
   background: #3556bf;
