--- a/src/Components/HeroComponent/HeroGlobal.css
+++ b/src/Components/HeroComponent/HeroGlobal.css
@@ -1,7 +1,8 @@
 .sub-page #troo-da-hero-section {
   padding: 149px 0;
   position: relative;
-  background: #eff2fd;
+  /* background: #eff2fd; */
+  box-shadow: 0px 8px 15px rgba(149, 157, 165, 0.1);
 }
 .sub-page #troo-da-hero-section:after {
   background: #3556bf;
