global banner section modified

--- a/src/Components/FetureComponent/FetureComponent.css
+++ b/src/Components/FetureComponent/FetureComponent.css
@@ -254,6 +254,7 @@ body h2 {
 }
 .Cources-page #troo-da-feature-section {
   padding: 100px 0 100px 0;
+  margin-top: 0;
 }
 .Cources-page.sub-page .call-ss {
   text-align: center;
