--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -383,6 +383,12 @@ a.btnn.btn-lg:hover {
   .navbar-nav.my-2.my-lg-0.navbar-nav-scroll {
     align-items: flex-start;
   }
+  li.active a.nav-link.active:before{
+    display: none;
+  }
+  li.active .nav-link.test::before{
+    display: none;
+  }
   button.navbar-toggler {
     border: 0;
     border-radius: 0;
@@ -502,7 +508,5 @@ a.btnn.btn-lg:hover {
   .fllowa-socail ul {
     margin: 0 0px 0 35px;
   }
-  li.active .nav-link.test::before{
-    display: none;
-  }
+ 
 }
